add primitive parser

--- a/TournamentsStat/PSStatBrowserConsole/PSStatBrowserConsole.csproj
+++ b/TournamentsStat/PSStatBrowserConsole/PSStatBrowserConsole.csproj
@@ -42,11 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Tournament.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="History.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PSStatBrowser\PSStatBrowser.csproj">
+      <Project>{9aec7d01-4f80-4bc2-90e3-615b77244c64}</Project>
+      <Name>PSStatBrowser</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
